Multiple pages, just begining
* Fixed a bug with load/save state
* Working on fixing reparenting (still doesn't work right)
* Added combobox support

--- a/src/XSRT2/ClassHandlers.tt
+++ b/src/XSRT2/ClassHandlers.tt
@@ -145,6 +145,18 @@ namespace XSRT2 {
         
         <#
         ClassDef(
+            "ComboBox",
+            true,
+            "Selector",
+            new PropEntry[] {
+            },
+            new EventEntry[] {
+            }
+        );
+        #>
+        
+        <#
+        ClassDef(
             "ListBox",
             true,
             "Selector",
@@ -161,6 +173,7 @@ namespace XSRT2 {
             false,
             "ItemsControl",
             new PropEntry[] {
+                new PropEntry() { Name="selectedItem", SetBody="{ target.SelectedItem = CreateForObjectType(x, lastX, context); }" }
             },
             new EventEntry[] {
                 new EventEntry() { Name="SelectionChanged", WinRTName="SelectionChanged", EventType="SelectionChangedEventArgs" }
@@ -323,10 +336,21 @@ namespace XSRT2 {
                     t.Children.Clear();
                     foreach (var child in children)
                     {
-                        var parent = VisualTreeHelper.GetParent(child) as Panel;
-                        if (parent != null)
+                        DependencyObject visualParent = null;
+
+                        var fe = child as FrameworkElement;
+                        if (fe != null && fe.Parent != null)
                         {
-                            parent.Children.Remove(child);
+                            visualParent = fe.Parent;
+                        }
+                        if (visualParent == null)
+                        {
+                            visualParent = VisualTreeHelper.GetParent(child);
+                        }
+                        var parentPanel = visualParent as Panel;
+                        if (parentPanel != null)
+                        {
+                            parentPanel.Children.Remove(child);
                         }
                         t.Children.Add(child);
                     }
@@ -472,6 +496,23 @@ namespace XSRT2 {
             }
         }
 
+        internal static object CreateForObjectType(JToken obj, JToken objLast, Handler.DiffContext context)
+        {
+            switch (obj.Type)
+            {
+                case JTokenType.Float:
+                    return obj.Value<double>();
+                case JTokenType.Integer:
+                    return obj.Value<int>();
+                case JTokenType.String:
+                    return obj.Value<string>();
+                case JTokenType.Object:
+                    var instance = Handler.CreateFromState((JObject)obj, objLast as JObject, context);
+                    return instance;
+                default:
+                    return "Unhandled:" + Enum.GetName(typeof(JTokenType), obj.Type);
+            }
+        }
 
         internal static void SetItemsSource(ItemsControl control, JToken source, JToken lastSource, Handler.DiffContext context)
         {
@@ -482,25 +523,7 @@ namespace XSRT2 {
             {
                 foreach (var child in source.AsJEnumerable())
                 {
-                    switch (child.Type)
-                    {
-                        case JTokenType.Float:
-                            collection.Add(child.Value<double>());
-                            break;
-                        case JTokenType.Integer:
-                            collection.Add(child.Value<int>());
-                            break;
-                        case JTokenType.String:
-                            collection.Add(child.Value<string>());
-                            break;
-                        case JTokenType.Object:
-                            var instance = Handler.CreateFromState((JObject)child, lastSource as JObject, context);
-                            collection.Add(instance);
-                            break;
-                        default:
-                            collection.Add("Unhandled:" + Enum.GetName(typeof(JTokenType), child.Type));
-                            break;
-                    }
+                    collection.Add(CreateForObjectType(child, lastSource, context));
                 }
             }
 
